# ecs-logging-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICE.txt  README.md  RELEASING.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  updatecli-compose.yaml
.ci/: .jenkins_python.yml  Jenkinsfile  update-specs.yml
.ci/jobs/: defaults.yml  ecs-logging-python-mbp.yml
.ci/scripts/: lint.sh  test.sh
.ci/updatecli/values.d/: ecs-logging-specs.yml  scm.yml
.github/: dependabot.yml
.github/workflows/: addToProject.yml  ci.yml  labeler.yml  matrix.yml  opentelemetry.yml  periodic.yml  release.yml  test-docs.yml  test.yml  update-specs.yml
docs/: APPLIES_TO_AUDIT.md  conf.py  docset.yml  index.asciidoc  index.rst  intro.asciidoc  setup.asciidoc
docs/reference/: index.md  installation.md  toc.yml
ecs_logging/: __init__.py  _meta.py  _stdlib.py  _structlog.py  _utils.py
tests/: compat.py  conftest.py  test_apm.py  test_meta.py  test_stdlib_formatter.py  test_structlog_formatter.py  test_typing.py  test_utils.py
tests/resources/: spec.json
tests/typing/: structlog_usage.py
utils/: check-license-headers.sh  license-header.txt
