[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "ecs-logging"
module = "ecs_logging"
description-file = "README.md"
author = "Seth Michael Larson"
author-email = "seth.larson@elastic.co"
home-page = "https://github.com/elastic/ecs-logging-python"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: System :: Logging",
  "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"

[tool.flit.metadata.requires-extra]
develop = [
    "pytest",
]
